--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,16 @@ version = "1.0.0"
 edition = "2018"
 
 [dependencies]
-ical = "0.7.0"
+ical = "0.7"
 ics = "0.5"
-uuid = { version = "0.8", features = ["v5"] }
+uuid = { version = "1.0", features = ["v5"] }
 serde = "1.0"
 serde_yaml = "0.8"
-lazy_static = "1.4.0"
-actix-web = "4.0.0-beta.9"
-reqwest = "0.11.4"
-tokio = "1"
+lazy_static = "1.4"
+actix-web = "4.0"
+reqwest = "0.11"
+tokio = "1.18"
+openssl = { version = "0.10", features = ["vendored"] }
  
 [profile.release]
 opt-level = 'z'
