--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,22 @@
 [package]
 name = "calconv"
-version = "1.0.0"
+version = "2.0.0"
+authors = ["Rijk van Putten <rijk@rijkvp.nl>"]
 edition = "2021"
+description = "ICAL calendar conversion."
 
 [dependencies]
+actix-web = { version="4.0", features=["openssl"] }
+serde = { version = "1.0", features = ["derive"] }
+awc = "3.0"
+openssl = { version = "0.10", features = ["vendored"] }
+clap = { version = "3.1", default-features = false, features = ["std", "derive", "suggestions"] }
+thiserror = "1.0"
+log = "0.4"
+env_logger = "0.9"
 ical = "0.7"
 ics = "0.5"
 uuid = { version = "1.0", features = ["v5"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.8"
-lazy_static = "1.4"
-actix-web = "4.0"
-reqwest = "0.11"
-tokio = "1.18"
-openssl = { version = "0.10", features = ["vendored"] }
 
 [profile.release]
 opt-level = 'z'
